index and json files

--- a/manual/ru/index.html
+++ b/manual/ru/index.html
@@ -11,18 +11,18 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body>
-    <h1>Welcome to Verge3D User Manual!</h1>
+    <h1>Добро пожаловать в Руководство Пользователя Verge3D!</h1>
 
     <p>
-      This documentation is aimed at non-programmers (designers, engineers, teachers) who would like to create interactive 3D web applications using their favorite modeling suite such as Blender, 3ds Max or Maya. If&nbsp;you're looking for the reference for JavaScript coders, please check out <a href="api/en/index.html">this link</a>.
+      Эта документация предназначена для людей, чья рабочая деятельность не связана с программированием (дизайнеров, инженеров, преподавателей), которые хотели бы создавать интерактивные 3D веб-приложения, используя свой любимый пакет моделирования, такой как Blender, 3ds Max или Maya. Если вы ищете справочник для JavaScript-кодеров, пожалуйста, загляните по этой <a href="api/en/index.html">ссылке</a>.
     </p>
 
     <p>
-      Select a topic from the left. If you don't know where to start - proceed straight to the <a href="manual/ru/introduction/Beginners-Guide.html">Beginner's Guide</a>.
+      Выберите тему слева. Если вы не знаете, с чего начать, перейдите сразу к <a href="manual/ru/introduction/Beginners-Guide.html">Руководству для начинающих</a>.
     </p>
 
     <p>
-      Chinese translation of these docs maintained by the community: <a href="https://zjbcool.com/v3d-user-manual" target="_blank">Verge3D用户手册</a>.
+      Китайский перевод руководства выполнен при поддержке сообщества: <a href="https://zjbcool.com/v3d-user-manual" target="_blank">Verge3D用户手册</a>.
     </p>
 
     <img src="files/blank/industrial-robot-gallery.jpg">
