--- a/manual/ru/introduction/Testing-Mobile-Browsers.html
+++ b/manual/ru/introduction/Testing-Mobile-Browsers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Тестирование Приложений Verge3D на Мобильных Браузерах - Soft8Soft</title>
+    <title>Тестирование Приложений Verge3D в Мобильных Браузерах - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how you can testing your Verge3D applications on mobile browsers."/>
     <base href="../../../" />
@@ -10,7 +10,7 @@
   </head>
   <body><article>
 
-    <h1>Тестирование Приложений Verge3D на Мобильных Браузерах</h1>
+    <h1>Тестирование Приложений Verge3D в Мобильных Браузерах</h1>
 
     <p>
       Когда вы запускаете приложение Verge3D из App Manager, оно запускается поверх локального сервера разработки, используя адрес *localhost*. Этот адрес может быть использован только на вашем компьютере. Для того чтобы проверить работу приложения в браузере мобильного устройства, можно воспользоваться одной из следующих процедур.
