--- a/manual/ru/max/Morphing.html
+++ b/manual/ru/max/Morphing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D для 3ds Max: Ключи формы (также известные как морфинг) - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Морфинг - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to setup and use morphing in Verge3D for 3ds Max."/>
     <base href="../../../" />
@@ -10,7 +10,7 @@
   </head>
   <body><article>
 
-    <h1>Ключи формы (также известные как морфинг)/ 3ds Max</h1>
+    <h1>Морфинг/ 3ds Max</h1>
 
     <p>Морфинг - это функция, позволяющая изменять форму объектов в режиме реального времени. Наиболее распространенный вариант использования этой функции - лицевая анимация. Морфинг также хорошо подходит для создания параметрических объектов, которые могут интерактивно изменять свои размеры, форму, толщину, отверстия, профили и т.д.</p>
 
