--- a/manual/ru/programmers_guide/Programming-basics.html
+++ b/manual/ru/programmers_guide/Programming-basics.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>How to create a custom Verge3D app from scratch - Soft8Soft</title>
+    <title>Как создать пользовательское приложение Verge3D с нуля - Soft8Soft</title>
     <meta charset="utf-8">
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Programming Basics</h1>
+    <h1>Основы программирования</h1>
 
-    <p>The goal of this section is to give a brief introduction to Verge3D. We will start by setting up a scene, with a spinning cube. A working example is provided at the bottom of the page in case you get stuck and need help.</p>
+    <p>Цель этого раздела - дать краткое введение в Verge3D. Мы начнем с создания сцены с вращающимся кубом. Внизу страницы приведен рабочий пример на случай, если вы затруднитесь и вам понадобится помощь.</p>
 
     [contents]
 
 
     [anchor:before_we_start]
 
-    <h2>Before we start</h2>
+    <h2>Прежде чем мы начнем</h2>
 
-    <p>Before you can use Verge3D, you need somewhere to display it. Save the following HTML to a file on your computer, along with a copy of Verge3D in your app directory, and open it in your browser.</p>
+    <p>Прежде чем использовать Verge3D, его нужно где-то отобразить. Сохраните следующий HTML в файл на компьютере вместе с копией Verge3D в директории приложения и откройте его в браузере.</p>
 
     <code>
     &lt;!DOCTYPE html&gt;
@@ -35,20 +35,20 @@
       &lt;body&gt;
         &lt;script src="v3d.js"&gt;&lt;/script&gt;
         &lt;script&gt;
-          // Our Javascript will go here.
+          // Наш Javascript будет находиться здесь.
         &lt;/script&gt;
       &lt;/body&gt;
     &lt;/html&gt;
     </code>
 
-    <p>That's all. All the code below goes into the empty &lt;script&gt; tag.</p>
+    <p>Вот и все. Весь приведенный ниже код помещается в пустой тег &lt;скрипта&gt;.</p>
 
 
     [anchor:creating_scene]
 
-    <h2>Creating the scene</h2>
+    <h2>Создание сцены</h2>
 
-    <p>To actually be able to display anything with Verge3D, we need three things: scene, camera and renderer, so that we can render the scene with camera.</p>
+    <p>Чтобы иметь возможность отображать что-либо с помощью Verge3D, нам нужны три вещи: сцена, камера и рендерер, чтобы мы могли отрисовать сцену с помощью камеры.</p>
 
     <code>
     var scene = new v3d.Scene();
@@ -59,25 +59,25 @@
     document.body.appendChild(renderer.domElement);
     </code>
 
-    <p>Let's take a moment to explain what's going on here. We have now set up the scene, our camera and the renderer.</p>
+    <p>Давайте немного объясним, что здесь происходит. Мы настроили сцену, камеру и рендерер.</p>
 
-    <p>There are a few different cameras in Verge3D. For now, let's use a <strong>PerspectiveCamera</strong>.</p>
+    <p>В Verge3D есть несколько различных камер. На данный момент, давайте используем <strong>PerspectiveCamera</strong>.</p>
 
-    <p>The first attribute is the <strong>field of view</strong>. FOV is the extent of the scene that is seen on the display at any given moment. The value is in degrees.</p>
+    <p>Первым атрибутом является <strong>поле зрения</strong>. FOV - это масштаб сцены, который виден на дисплее в любой момент времени. Значение указывается в градусах.</p>
 
-    <p>The second one is the <strong>aspect ratio</strong>. You almost always want to use the width of the element divided by the height, or you'll get the same result as when you play old movies on a widescreen TV - the image looks squished.</p>
+    <p>Второй - это <strong>соотношение сторон</strong>. Почти всегда нужно использовать ширину элемента, деленную на высоту, иначе вы получите тот же результат, что и при воспроизведении старых фильмов на широкоэкранном телевизоре - изображение будет выглядеть сжатым.</p>
 
-    <p>The next two attributes are the <strong>near</strong> and <strong>far</strong> clipping plane. What that means, is that objects further away from the camera than the value of <strong>far</strong> or closer than <strong>near</strong> won't be rendered. You don't have to worry about this now, but you may want to use other values in your apps to get better performance.</p>
+    <p>Следующие два атрибута - <strong>near (ближняя)</strong> и <strong>far (дальняя)</strong> плоскость сечения. Это означает, что объекты, расположенные дальше от камеры, чем значение <strong>far</strong> или ближе, чем <strong>near</strong>, не будут отображаться.. Сейчас вам не нужно беспокоиться об этом, но вы можете захотеть использовать другие значения в своих приложениях для достижения лучшей производительности.</p>
 
-    <p>Next up is the renderer. This is where the magic happens. In addition to the WebGLRenderer we use here, Verge3D comes with a few others, often used as fallbacks for users with older browsers or for those who don't have WebGL support for some reason.</p>
+    <p>Далее следует рендерер. Именно здесь происходит волшебство. В дополнение к WebGLRenderer, который мы используем здесь, Verge3D поставляется с несколькими другими, часто используемыми как запасные варианты для пользователей старых браузеров или для тех, у кого по каким-то причинам нет поддержки WebGL.</p>
 
-    <p>In addition to creating the renderer instance, we also need to set the size at which we want it to render our app. It's a good idea to use the width and height of the area we want to fill with our app - in this case, the width and height of the browser window. For performance intensive apps, you can also give <strong>setSize</strong> smaller values, like <strong>window.innerWidth/2</strong> and <strong>window.innerHeight/2</strong>, which will make the app render at half size.</p>
+    <p>В дополнение к созданию экземпляра рендерера, нам также нужно установить размер, при котором мы хотим, чтобы он рендерил наше приложение. Хорошая идея - использовать ширину и высоту области, которую мы хотим заполнить нашим приложением - в данном случае, ширину и высоту окна браузера. Для приложений, требующих высокой производительности, вы также можете поставить меньшее значение <strong>setSize</strong> , как окно <strong>window.innerWidth/2</strong> и <strong>window.innerHeight/2</strong>, что приведет к рендерингу приложения в половинном размере.</p>
 
-    <p>If you wish to keep the size of your app but render it at a lower resolution, you can do so by calling <strong>setSize</strong> with false as <strong>updateStyle</strong> (the third argument). For example, <strong>setSize(window.innerWidth/2, window.innerHeight/2, false)</strong> will render your app at half resolution, given that your &lt;canvas&gt; has 100% width and height.</p>
+    <p>Если вы хотите сохранить размер вашего приложения, но отобразить его в более низком разрешении, вы можете сделать это, вызвав <strong>setSize</strong> с false в качестве <strong>updateStyle</strong> (третий аргумент). Например, <strong>setSize(window.innerWidth/2, window.innerHeight/2, false)</strong> будет рендерить ваше приложение с половинным разрешением, учитывая, что ваш  &lt;канвас&gt; имеет 100% ширину и высоту.</p>
 
-    <p>Last but not least, we add the <strong>renderer</strong> element to our HTML document. This is a &lt;canvas&gt; element the renderer uses to display the scene to us.</p>
+    <p>И последнее, но не менее важное, мы добавляем элемент <strong>renderer</strong> в наш HTML-документ. Это элемент &lt;канваса&gt; element который использует рендерер для отображения сцены.</p>
 
-    <p><em>"That's all good, but where's that cube you promised?"</em> Let's add it now.</p>
+    <p><em>"Это все хорошо, но где тот куб, который ты обещал?".</em> Давайте добавим его сейчас.</p>
 
     <code>
     var geometry = new v3d.BoxGeometry(1, 1, 1);
@@ -88,20 +88,20 @@
     camera.position.z = 5;
     </code>
 
-    <p>To create a cube, we need a <strong>BoxGeometry</strong>. This is an object that contains all the points (<strong>vertices</strong>) and fill (<strong>faces</strong>) of the cube. We'll explore this more in the future.</p>
+    <p>Чтобы создать куб, нам понадобится <strong>BoxGeometry</strong>. Это объект, который содержит все точки (<strong>вершины</strong>) и заполняет (<strong>фейсы</strong>) куба. Мы подробнее изучим этот вопрос в будущем.</p>
 
-    <p>In addition to the geometry, we need a material to color it. Verge3D comes with several materials, but we'll stick to the <strong>MeshBasicMaterial</strong> for now. All materials take an object of properties which will be applied to them. To keep things very simple, we only supply a color attribute of <strong>0x00ff00</strong>, which is green. This works the same way that colors work in CSS or Photoshop (<strong>hex colors</strong>).</p>
+    <p>В дополнение к геометрии нам нужен материал, чтобы раскрасить ее. Verge3D поставляется с несколькими материалами, но сейчас мы остановимся на <strong>MeshBasicMaterial</strong> . Все материалы принимают объект свойств, которые будут к ним применены. Чтобы все было просто, мы предоставляем только атрибут цвета <strong>0x00ff00</strong>, тоесть зелёный. Это работает так же, как цвета в CSS или Photoshop (<strong>hex colors</strong>).</p>
 
-    <p>The third thing we need is a <strong>Mesh</strong>. A mesh is an object that takes a geometry, and applies a material to it, which we then can insert to our scene, and move freely around.</p>
+    <p>Третье, что нам нужно, это <strong>Меш</strong>. Меш - это объект, который берет геометрию и применяет к ней материал, который мы затем можем вставить в нашу сцену и свободно перемещать по ней.</p>
 
-    <p>By default, when we call <strong>scene.add()</strong>, the thing we add will be added to the coordinates <strong>(0,0,0)</strong>. This would cause both the camera and the cube to be inside each other. To avoid this, we simply move the camera out a bit.</p>
+    <p>По умолчанию, когда мы обращаемся к <strong>scene.add()</strong>, вещь, которую мы добавляем, будет помещена к координатам <strong>(0,0,0)</strong>. Это приведет к тому, что камера и куб окажутся внутри друг друга. Чтобы избежать этого, мы просто немного выдвинем камеру.</p>
 
 
     [anchor:rendering_scene]
 
-    <h2>Rendering the scene</h2>
+    <h2>Рендеринг сцены</h2>
 
-    <p>If you copied the code from above into the HTML file we created earlier, you wouldn't be able to see anything. This is because we're not actually rendering anything yet. For that, we need what's called a <strong>render or animate loop</strong>.</p>
+    <p>Если бы вы скопировали код сверху в HTML-файл, который мы создали ранее, вы бы ничего не увидели. Это происходит потому, что мы еще ничего не отрендерили. Для этого нам нужен так называемый цикл  <strong>рендеринга или анимации</strong>.</p>
 
     <code>
     function animate() {
@@ -111,32 +111,32 @@
     animate();
     </code>
 
-    <p>This will create a loop that causes the renderer to draw the scene 60 times per second. If you're new to writing games in the browser, you might say <em>"why don't we just create a setInterval ?"</em> The thing is - we could, but <strong>requestAnimationFrame</strong> has a number of advantages. Perhaps the most important one is that it pauses when the user navigates to another browser tab, hence not wasting their precious processing power and battery life.</p>
+    <p>Это создаст цикл, который заставит рендерер рисовать сцену 60 раз в секунду. Если вы новичок в написании игр в браузере, вы можете сказать <em>"почему бы нам просто не создать setInterval ?"</em> Дело в том, что мы могли бы, но <strong>requestAnimationFrame</strong> имеет ряд преимуществ. Perhaps the most important one is that it pauses when the user navigates to another browser tab, Возможно, самым важным из них является то, что он приостанавливается, когда пользователь переходит на другую вкладку браузера, а значит, не тратит драгоценную вычислительную мощность и заряд батареи.</p>
 
 
     [anchor:animating_cube]
 
-    <h2>Animating the cube</h2>
+    <h2>Анимирование куба</h2>
 
-    <p>If you insert all the code above into the file you created before we began, you should see a green box. Let's make it all a little more interesting by rotating it.</p>
+    <p>Если вы вставите весь приведенный выше код в файл, который вы создали перед началом нашей работы, вы должны увидеть зеленую коробку. Давайте сделаем все это немного интереснее, развернув ее.</p>
 
-    <p>Add the following right above the <strong>renderer.render</strong> call in your <strong>animate</strong> function:</p>
+    <p>Добавьте следующее прямо над <strong>renderer.render</strong> call в вашу функцию <strong>animate</strong> :</p>
 
     <code>
     cube.rotation.x += 0.1;
     cube.rotation.y += 0.1;
     </code>
 
-    <p>This will be run every frame (60 times per second), and give the cube a nice rotation animation. Basically, anything you want to move or change while the app is running has to go through the animate loop. You can of course call other functions from there, so that you don't end up with a <strong>animate</strong> function that's hundreds of lines.
+    <p>Он будет выполняться каждый кадр (60 раз в секунду) и создаст красивую анимацию вращения куба. В принципе, все, что вы хотите переместить или изменить во время работы приложения, должно пройти через цикл анимации. Вы, конечно, можете вызывать оттуда другие функции, чтобы в итоге не получить функцию <strong>animate</strong>  состоящую из сотен строк.
     </p>
 
     [anchor:result]
 
-    <h2>The result</h2>
+    <h2>Результат</h2>
 
-    <p>Congratulations! You have now completed your first Verge3D application. It's simple, you have to start somewhere.</p>
+    <p>Поздравляем! Вы завершили свое первое приложение Verge3D. Все просто, нужно с чего-то начинать.</p>
 
-    <p>The full code is available below. Play around with it to get a better understanding of how it works.</p>
+    <p>Полный код доступен ниже. Поиграйтесь с ним, чтобы лучше понять, как он работает.</p>
 
     <code>
     &lt;html&gt;
