--- a/manual/ru/index.html
+++ b/manual/ru/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Verge3D User Manual - Soft8Soft</title>
-    <meta content="The official User Manual on Verge3D for Blender, 3ds Max and Maya." name="description">
+    <title>Руководство пользователя Verge3D - Soft8Soft</title>
+    <meta content="Официальное руководство по использованию Verge3D для Blender, 3ds Max и Maya." name="description">
 
     <base href="../../" />
     <script src="page.js"></script>
