ru: Fix webflow links

--- a/manual/ru/introduction/Features.html
+++ b/manual/ru/introduction/Features.html
@@ -343,7 +343,7 @@
         <th>UI и HTML окружение</th>
         <td colspan=3>
           Интерфейс приложения, созданный с помощью внешних редакторов WYSIWYG, можно <a href="manual/ru/introduction/HTML-based-user-interfaces.html"> связать с пазлами </a>, для управления 3D-сценой.
-          <br>Мы рекомендуем использовать<a href="https://webflow.com/?rfsn=3441118.131f06" target="_blank">Webflow</a> конструктор сайтов без написания кода.
+          <br>Мы рекомендуем использовать <a href="https://webflow.grsm.io/3441118" target="_blank">Webflow</a> конструктор сайтов без написания кода.
         </td>
       </tr>
 
