--- a/manual/ru/introduction/Workflow.html
+++ b/manual/ru/introduction/Workflow.html
@@ -180,7 +180,7 @@
     <h2>Верстка и UI</h2>
 
     <p>
-      В нашем рабочем процессе интерфейс создается на базе HTML с использованием стороннего программного обеспечения для веб-дизайна. Вы можете брать любой редактор WYSIWYG способный экспортировать файлы HTML, CSS и JS. Неплохим инструментом является <a href="https://webflow.com/?rfsn=3441118.131f06" target="_blank">Webflow</a>, который мы использовали для создания большинства демонстраций Verge3D, таких как Scooter, Farmer's Journey или Industrial Robot. Конечно, вы можете создать HTML-интерфейс вручную с помощью кода или найти другие инструменты.
+      В нашем рабочем процессе интерфейс создается на базе HTML с использованием стороннего программного обеспечения для веб-дизайна. Вы можете брать любой редактор WYSIWYG способный экспортировать файлы HTML, CSS и JS. Неплохим инструментом является <a href="https://webflow.grsm.io/3441118" target="_blank">Webflow</a>, который мы использовали для создания большинства демонстраций Verge3D, таких как Scooter, Farmer's Journey или Industrial Robot. Конечно, вы можете создать HTML-интерфейс вручную с помощью кода или найти другие инструменты.
     </p>
 
     <img src="files/workflow/webflow-project.jpg" class="centered" style="max-width: 819px;">
