Minor fixes in ru/zh index files

--- a/manual/ru/index.html
+++ b/manual/ru/index.html
@@ -14,7 +14,7 @@
     <h1>Добро пожаловать в Руководство Пользователя Verge3D!</h1>
 
     <p>
-      Эта документация предназначена для людей, чья рабочая деятельность не связана с программированием (дизайнеров, инженеров, преподавателей), которые хотели бы создавать интерактивные 3D веб-приложения, используя свой любимый пакет моделирования, такой как Blender, 3ds Max или Maya. Если вы ищете справочник для JavaScript-кодеров, пожалуйста, загляните по этой <a href="api/en/index.html">ссылке</a>.
+      Эта документация предназначена для людей, чья рабочая деятельность не связана с программированием (дизайнеров, инженеров, преподавателей), которые хотели бы создавать интерактивные 3D веб-приложения, используя свой любимый пакет моделирования, такой как Blender, 3ds Max или Maya. Если вы ищете справочник для JavaScript-кодеров, пожалуйста, загляните по этой <a href="api/ru/index.html">ссылке</a>.
     </p>
 
     <p>
@@ -22,7 +22,7 @@
     </p>
 
     <p>
-      Китайский перевод руководства выполнен при поддержке сообщества: <a href="https://zjbcool.com/v3d-user-manual" target="_blank">Verge3D用户手册</a>.
+      Руководство пользователя доступно также на <a href="manual/en/index.html">английском</a> и <a href="manual/zh/index.html">китайском</a> языках.
     </p>
 
     <img src="files/blank/industrial-robot-gallery.jpg">
